--- a/server/Api/appsettings.json
+++ b/server/Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LibraryDbConn": "Host=ep-blue-silence-adbo8e3e-pooler.c-2.us-east-1.aws.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_9vGgd2XFNitl;Ssl Mode=Require;Channel Binding=Require;"
+    "LibraryDbConn": "Host=<Host>;Database=<Db>;Username=<User>;Password=<Pass>;Ssl Mode=Require;Channel Binding=Require;"
   }
 }
